src/test/deca/syntax/invalid/resultats/test12_float-synt.res
./src/test/deca/syntax/invalid/test12_float.deca:16:9: missing IDENT at ')'
